fixed overflow issue

--- a/Soothing/style.css
+++ b/Soothing/style.css
@@ -18,6 +18,7 @@ body {
   display: grid;
   place-items: center;
   background-color: var(--bgColor);
+  overflow: hidden;
 }
 
 .container {
@@ -54,6 +55,9 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+  body {
+    overflow: none;
+  }
   .card {
     display: flex;
     position: relative;
